service.yaml
apiVersion: v1
kind: Service
metadata:
  name: e2e-project-deployment-svc
  namespace: guestbook
spec:
  type: ClusterIP
  selector:
    app: e2e-app
  ports:
    - port: 80
      targetPort: 8080
